# 3DViewer_v2.0

./: Makefile  README.md
appviewer/: CMakeLists.txt  controller.cc  controller.cpp  controller.h  main.cc  main.cpp  oglwindow.cc  oglwindow.cpp  oglwindow.h  view.cc  view.cpp  view.h  view.ui
appviewer/gifLib/: CMakeLists.txt  gifimage.pro  qgifglobal.h
docs/: 3DViewer.texi  example.eps  subject_en.md
libviewer/: Makefile  base_file_reader.cc  base_file_reader.h  face.h  figure.h  file_reader.h  file_reader_base.cc  file_reader_base.h  file_reader_obj.h  file_reader_settings.cc  file_reader_settings.h  file_writer_base.cc  file_writer_base.h  file_writer_settings.cc  file_writer_settings.h  matrix4x4.h  obj_file_reader.h  object.h  render_base.h  render_ffp.h  renderer.h  scene.h  scene_object.h  scene_settings.cc  scene_settings.h  transform_matrix_builder.h  vec4.h  vertex.h  viewer.cc  viewer.h  viewer_operation_result.h  wireframe.h
libviewer/tests/: test_face.cc  test_figure.cc  test_matrix4x4.cc  test_object.cc  test_transform_matrix_builder.cc  test_vec4.cc  test_vertex.cc  test_vf_obj_file_reader.cc  test_viewer.cc  test_wireframe.cc
